Fixed image link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var metrics = <span class="Code-keyword">new</span> Metrics()
           <p>All that's required is to create a plugin to listen to each of the events and send them to your dashboard using their API.</p>
         </div>
         <div class="Grid-cell u-size1of2">
-          <img src="/images/dashboard.png" width="350" />
+          <img src="images/dashboard.png" width="350" />
         </div>
       </div>
     </div>
